--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,7 +42,7 @@ twig:
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_mysql
+        driver:   "%database_type%"
         host:     "%database_host%"
         port:     "%database_port%"
         dbname:   "%database_name%"
