--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ services:
 sudo: required
 env:
   - DB=mysql
-  - DB=postgres
+  - DB=pgsql
 
 before_script:
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'DROP DATABASE IF EXISTS tests;' -U postgres; fi"
