--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,7 +4,7 @@
 parameters:
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     symfony
+    database_name:     tests
     database_user:     root
     database_password: ~
     database_type:     pdo_mysql
