--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,7 +38,9 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
-
+    date:
+        format: Y-m-d H:i:s
+        interval_format: '%%hh%%mm%%ss'
 # Doctrine Configuration
 doctrine:
     dbal:
