--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,20 @@
 /vendor/
 /web/bundles/
 web/assets/vendor
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dataSources/
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+.idea/gradle.xml
+.idea/libraries
+.idea/mongoSettings.xml
+.idea/sonarIssues.xml
+.idea/atlassian-ide-plugin.xml
+.idea/dbnavigator.xml
+*.iws
+.idea_modules/
