--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,29 +6,30 @@
          backupGlobals="false"
          colors="true"
          bootstrap="app/autoload.php"
+         forceCoversAnnotation="true"
 >
-    <logging>
-        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
-    </logging>
-    <php>
-        <ini name="error_reporting" value="-1" />
-        <server name="KERNEL_DIR" value="app/" />
-    </php>
+  <logging>
+    <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
+  </logging>
+  <php>
+    <ini name="error_reporting" value="-1"/>
+    <server name="KERNEL_DIR" value="app/"/>
+  </php>
 
-    <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
+  <testsuites>
+    <testsuite name="Project Test Suite">
+      <directory>tests</directory>
+    </testsuite>
+  </testsuites>
 
-    <filter>
-        <whitelist>
-            <directory>src</directory>
-            <exclude>
-                <directory>src/*Bundle/Resources</directory>
-                <directory>src/*/*Bundle/Resources</directory>
-                <directory>src/*/Bundle/*Bundle/Resources</directory>
-            </exclude>
-        </whitelist>
-    </filter>
+  <filter>
+    <whitelist>
+      <directory>src</directory>
+      <exclude>
+        <directory>src/*Bundle/Resources</directory>
+        <directory>src/*/*Bundle/Resources</directory>
+        <directory>src/*/Bundle/*Bundle/Resources</directory>
+      </exclude>
+    </whitelist>
+  </filter>
 </phpunit>
