--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,5 @@
 app:
     resource: "@CCronBundle/Controller/"
     type:     annotation
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
