--- a/composer.json
+++ b/composer.json
@@ -1,71 +1,84 @@
 {
-    "name": "davidvanlaatum/ccron",
-    "license": "MIT",
-    "type": "project",
-    "description": "Cluster Cron",
-    "autoload": {
-        "psr-4": { "": "src/" },
-        "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
+  "name": "davidvanlaatum/ccron",
+  "license": "MIT",
+  "type": "project",
+  "description": "Cluster Cron",
+  "autoload": {
+    "psr-4": {
+      "CCronBundle\\": "src/CCronBundle"
     },
-    "autoload-dev": {
-        "psr-4": { "Tests\\": "tests/" }
-    },
-    "require": {
-        "php": ">=5.6.8",
-        "symfony/symfony": "3.2.*",
-        "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "^1.6",
-        "doctrine/doctrine-cache-bundle": "^1.2",
-        "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/monolog-bundle": "^3.0.2",
-        "symfony/polyfill-apcu": "^1.0",
-        "sensio/distribution-bundle": "^5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "^2.0",
-        "php-amqplib/rabbitmq-bundle": "^1.12",
-        "qxsch/worker-pool": "^1.4",
-        "mtdowling/cron-expression": "^1.1",
-        "fxp/composer-asset-plugin": "^1.2",
-      "bower-asset/bootstrap": "^3.3",
-      "doctrine/doctrine-fixtures-bundle": "^2.3"
-    },
-    "require-dev": {
-        "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0",
-        "phpunit/phpunit": "^5",
-      "phpunit/phpcov": "^3.1",
-      "sebastian/phpcpd": "^2.0",
-      "squizlabs/php_codesniffer": "*"
-    },
-    "scripts": {
-        "symfony-scripts": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
-        ],
-        "post-install-cmd": [
-            "@symfony-scripts"
-        ],
-        "post-update-cmd": [
-            "@symfony-scripts"
-        ]
-    },
-    "extra": {
-        "symfony-app-dir": "app",
-        "symfony-bin-dir": "bin",
-        "symfony-var-dir": "var",
-        "symfony-web-dir": "web",
-        "symfony-tests-dir": "tests",
-        "symfony-assets-install": "relative",
-        "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
-        },
-        "asset-installer-paths": {
-            "npm-asset-library": "web/assets/vendor",
-            "bower-asset-library": "web/assets/vendor"
-        }
+    "classmap": [
+      "app/AppKernel.php",
+      "app/AppCache.php"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
     }
+  },
+  "require": {
+    "php": ">=5.6.8",
+    "bower-asset/bootstrap": "^3.3",
+    "doctrine/doctrine-bundle": "^1.6",
+    "doctrine/doctrine-cache-bundle": "^1.2",
+    "doctrine/doctrine-fixtures-bundle": "^2.3",
+    "doctrine/orm": "^2.5",
+    "friendsofsymfony/user-bundle": "~2.0@dev",
+    "fxp/composer-asset-plugin": "^1.2",
+    "incenteev/composer-parameter-handler": "^2.0",
+    "kriswallsmith/spork": "^0.3.0",
+    "mtdowling/cron-expression": "^1.1",
+    "ocramius/proxy-manager": "^1.0",
+    "pear/net_url2": "^2.2",
+    "php-amqplib/rabbitmq-bundle": "^1.12",
+    "qxsch/worker-pool": "^1.4",
+    "sensio/distribution-bundle": "^5.0",
+    "sensio/framework-extra-bundle": "^3.0.2",
+    "symfony/assetic-bundle": "^2.8",
+    "symfony/monolog-bundle": "^3.0.2",
+    "symfony/polyfill-apcu": "^1.0",
+    "symfony/proxy-manager-bridge": "^3.2",
+    "symfony/swiftmailer-bundle": "^2.3.10",
+    "symfony/symfony": "3.2.*"
+  },
+  "require-dev": {
+    "sensio/generator-bundle": "^3.0",
+    "symfony/phpunit-bridge": "^3.0",
+    "phpunit/phpunit": "^5",
+    "phpunit/phpcov": "^3.1",
+    "sebastian/phpcpd": "^2.0",
+    "squizlabs/php_codesniffer": "*"
+  },
+  "scripts": {
+    "symfony-scripts": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+    ],
+    "post-install-cmd": [
+      "@symfony-scripts"
+    ],
+    "post-update-cmd": [
+      "@symfony-scripts"
+    ]
+  },
+  "extra": {
+    "symfony-app-dir": "app",
+    "symfony-bin-dir": "bin",
+    "symfony-var-dir": "var",
+    "symfony-web-dir": "web",
+    "symfony-tests-dir": "tests",
+    "symfony-assets-install": "relative",
+    "incenteev-parameters": {
+      "file": "app/config/parameters.yml"
+    },
+    "asset-installer-paths": {
+      "npm-asset-library": "web/assets/vendor",
+      "bower-asset-library": "web/assets/vendor"
+    }
+  }
 }
