--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - vendor/bin/phpunit
   - vendor/bin/phpcpd --fuzzy src/ tests/
   - bin/console translation:update --output-format=xlf en --force
-  - git diff --exit-code
+  - git diff --exit-code app/Resources/
 
 services:
   - mysql
